Fixed bug on mobile screen on projects page

--- a/css/main.css
+++ b/css/main.css
@@ -615,20 +615,20 @@ video {
   margin-top: 6rem;
 }
 
-.mt-52{
-  margin-top: 13rem;
-}
-
 .mt-32{
   margin-top: 8rem;
 }
 
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-4{
   margin-top: 1rem;
+}
+
+.mt-48{
+  margin-top: 12rem;
+}
+
+.mt-52{
+  margin-top: 13rem;
 }
 
 .block{
@@ -673,10 +673,6 @@ video {
 
 .max-w-xl{
   max-width: 36rem;
-}
-
-.max-w-xs{
-  max-width: 20rem;
 }
 
 .grow{
@@ -763,6 +759,31 @@ video {
 
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-8{
+  border-width: 8px;
+}
+
+.border-4{
+  border-width: 4px;
+}
+
+.border-solid{
+  border-style: solid;
+}
+
+.border-dashed{
+  border-style: dashed;
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-blueRibbon{
@@ -904,6 +925,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.outline-offset-4{
+  outline-offset: 4px;
+}
+
 .drop-shadow-md{
   --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.07)) drop-shadow(0 2px 2px rgb(0 0 0 / 0.06));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1042,10 +1067,6 @@ video {
     width: 24rem;
   }
 
-  .md\:max-w-sm{
-    max-width: 24rem;
-  }
-
   .md\:flex-row{
     flex-direction: row;
   }
@@ -1066,6 +1087,10 @@ video {
 
   .md\:text-left{
     text-align: left;
+  }
+
+  .md\:text-center{
+    text-align: center;
   }
 
   .md\:text-5xl{
